src/components/SideBarImports.css
.sideBar .panel {
    position: absolute;
    height: 88%;
    top: 41.5px;
    background: #101827;
    border: solid 5px black;
    border-left: 0px;
    border-radius: 0px 25px 25px 0px;
    display: flex;
    flex-direction: column;
}

.sideBar .button {
    position: absolute;
    top: 45%;
    width: 20px;
    height: 150px;
    background: #101827;
    border-radius: 0px 15px 15px 0px;
    border: solid 5px black;
    border-left: 0px;
    color: white;
    font-weight: bolder;
}

.sideBar .panel .title {
    color: white;
    width: 100%;
    text-align: center;
    font-size: 2em;
    text-decoration: underline;
}


.sideBar .panel .colorcoded-wrapper {
    display: flex;
    justify-content: space-evenly;
    margin-top: 10px;
  }
  
  .sideBar .panel .colorcoded-wrapper .circle-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  .sideBar .panel .colorcoded-wrapper .circle-wrapper .circle-label {
    font-size: 12px;
    margin-top: 4px;
    text-align: center;
    color: #ffffff;
    overflow:hidden;
  }
  
  .sideBar .panel .colorcoded-wrapper .circle-wrapper .circle {
    flex: 1;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    margin: 0 4px;
    font-weight: bold;
    font-size: 16px;
    overflow:hidden;
  }
  
  .sideBar .panel .colorcoded-wrapper .money-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  .sideBar .panel .colorcoded-wrapper .money-wrapper .money {
    width: 70px;
    height: 50px;
    border-radius: 15%;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    margin: 0 4px;
    font-weight: bold;
    font-size: 16px;
  }
  
  .sideBar .panel .colorcoded-wrapper .money-wrapper .annotate {
    width: 70px;
    height: 20px;
    color: #fff;
    background-color: #374151;
    border-radius: 4px;
    display: flex;
    font-weight: 100;
    font-size: small;
    align-items: center;
  }
  
  .sideBar .panel .colorcoded-wrapper .money-wrapper .annotate .text {
    flex: auto;
    text-align: center;
  }
  
  .sideBar .panel .colorcoded-wrapper .money-wrapper .money-label {
    font-size: 12px;
    margin-top: 4px;
    text-align: center;
    color: #ffffff;
  }

  .sideBar .panel .barPlot-title {
    color: white;
    text-align: center;
    text-decoration: underline;
    white-space: pre-line;
  }

.sideBar .panel .barPlot {
    text-align: center;
    color: white;
    margin-top: 10px;
    overflow-y: scroll;
    min-height: 100px;
}

.sideBar .panel .timeSeries {
  min-height: 35%;
}

